@@ -1,8 +1,16 @@
+2011-10-04  Andreas Kupries  <andreask@activestate.com>
+
+	* doc/instance.inc: [Issue 5]: Reworked "topology depth|type",
+	* generic/topology.c: dropped the redundant options. Updated
+	* tests/create.test: testsuite and documentation.
+	* tests/topology.test:
+
 2011-10-03  Andreas Kupries  <andreask@activestate.com>
 
-	* generic/topology.c: [Issue 5]: Reworked "topology convert",
-	* tests/topology_convert.test: changed -to_ options into
-	* doc/instance.inc: methods. Updated testsuite and documentation.
+	* doc/instance.inc: [Issue 5]: Reworked "topology convert",
+	* generic/topology.c: changed -to_ options into methods.
+	* tests/topology_convert.test: Updated testsuite and
+	  documentation.
 
 2011-09-29  Andreas Kupries  <andreask@activestate.com>
 
